--- a/src/components/MovieCast/MovieCast.module.css
+++ b/src/components/MovieCast/MovieCast.module.css
@@ -1,16 +1,25 @@
 .castList {
   display: flex;
   flex-wrap: wrap;
-  gap: 40px;
+  gap: 24px;
+  justify-content: center;
 }
 
 .castItem {
+    font-size: 14px;
+    width: 150px;
   display: flex;
   flex-direction: column;
   gap: 8px;
   justify-content: center;
-  align-items: center;
-  border: 1px solid black;
-  padding: 15px;
-  border-radius: 15px;
+}
+
+.infoWrap {
+    display: flex;
+    flex-direction: column;
+    border-bottom: 3px solid;
+    border-top: 3px solid;
+    width: 100%;
+    align-items: center;
+    padding: 5px 0;
 }
