--- a/src/components/MovieList/MovieList.module.css
+++ b/src/components/MovieList/MovieList.module.css
@@ -1,21 +1,10 @@
-.boxList {
-  margin-top: 25px;
+.movieWrap {
+    padding: 30px;
 }
 
-.listMovies {
-  display: flex;
-  justify-content: center;
-  flex-direction: row;
-  flex-wrap: wrap;
-  gap: 40px;
-}
-
-.itemMovies {
-  text-decoration: none;
-}
-
-.titleMovie {
-  margin-top: 8px;
-  text-align: center;
-  color: rgb(190, 180, 180);
+.movieList {
+    display: flex;
+    flex-wrap: wrap;
+    gap: 30px;
+    justify-content: center;
 }
