--- a/src/components/Navigation/Navigation.module.css
+++ b/src/components/Navigation/Navigation.module.css
@@ -1,22 +1,41 @@
-.navMenu {
+.link {
   display: flex;
-  flex-direction: row;
+  align-items: center;
+  justify-content: center;
+  width: 100px;
+  height: 48px;
+  font-size: 22px;
+  font-weight: 500;
+}
+.link:hover {
+  color: #6f6f6f;
+}
+.active:hover {
+  color: rgb(237, 233, 226);
+}
+.active {
+  color: rgb(237, 233, 226);
+  background-color: #0d3a61;
+
+  width: 160px;
+  height: 46px;
+
+  border-radius: 20px;
+}
+
+.nav {
+  width: 284px;
+  height: 52px;
+  border-radius: 24px;
+
+  display: flex;
+  gap: 2px;
   justify-content: center;
   align-items: center;
-  gap: 25px;
 }
 
-.btnNavigation {
-  border: 1px solid white;
-  background-color: black;
-  padding: 15px 35px;
-  border-radius: 10px;
-  color: white;
-  text-decoration: none;
-}
-
-.active {
-  border-color: black;
-  background-color: white;
-  color: black;
+.header {
+  display: flex;
+  justify-content: center;
+  padding: 30px 0;
 }
