--- a/src/components/SearchForm/SearchForm.module.css
+++ b/src/components/SearchForm/SearchForm.module.css
@@ -1,26 +1,31 @@
-.form {
+.searchForm {
+  width: 500px;
   display: flex;
-  justify-content: center;
-  margin: 25px 0;
-  gap: 10px;
+
+  margin-left: auto;
+  margin-right: auto;
+  margin-top: 10px;
+  margin-bottom: 20px;
 }
 
 .input {
-  width: 250px;
-  padding: 10px;
-  border-radius: 15px;
-}
-
-.btnSubmit {
-  padding: 20px;
-  background-color: black;
+  font-size: 20px;
+  width: 100%;
+  height: 50px;
+  border-bottom-left-radius: 20px;
+  border-top-left-radius: 20px;
+  outline: none;
+  padding-left: 8px;
   border: none;
-  border-radius: 15px;
-  width: 100px;
-  color: white;
+  background-color: rgb(232, 240, 254);
 }
 
-.btnSubmit:hover {
-  background-color: rgb(136, 136, 136);
-  color: black;
+.searchBtn {
+  background-color: rgb(232, 240, 254);
+  border-radius: none;
+  border-bottom-right-radius: 20px;
+  border-top-right-radius: 20px;
+  border: none;
+  padding: 0;
+  width: 70px;
 }
