--- a/src/pages/HomePage/HomePage.module.css
+++ b/src/pages/HomePage/HomePage.module.css
@@ -1,7 +1,5 @@
 .title {
-  margin-top: 20px;
-  text-align: center;
-  border-bottom: 1px solid black;
-  border-top: 1px solid black;
-  padding: 10px;
+    text-align: center;
+    font-size: 60px;
+    
 }
