--- a/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
+++ b/src/pages/MovieDetailsPage/MovieDetailsPage.module.css
@@ -1,94 +1,96 @@
+.moveiDetailsWrap {
+  padding: 0 180px;
+}
+
+.title {
+  font-size: 50px;
+  margin-bottom: 20px;
+}
+
+.subtitle {
+  font-size: 24px;
+  margin-bottom: 16px;
+}
+
+.text {
+  font-size: 16px;
+  margin-bottom: 20px;
+}
+
 .detailsMovies {
   display: flex;
-  gap: 25px;
-}
-.leftBox {
-  margin-top: 20px;
-}
-
-.infoBox {
-  display: flex;
-  flex-direction: column;
-  border: 1px solid black;
-  margin-top: 20px;
-  padding: 20px;
-}
-.title {
-  text-align: center;
-}
-
-.companyItem {
-  display: flex;
-  flex-direction: column;
-}
-
-.companyBox {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-
-.companyItem {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-}
-.titleCompany {
-  text-align: center;
-  margin-bottom: 10px;
-}
-
-.companyName {
-  margin-bottom: 10px;
-}
-
-.score {
-  padding: 7px;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-  margin-bottom: 8px;
-}
-
-.overview {
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-  margin-bottom: 15px;
-}
-
-.genres {
-  padding: 7px;
-  border-top: 1px solid black;
-  border-bottom: 1px solid black;
-}
-
-.aditionalInfo {
-  text-align: center;
-  margin-top: 20px;
-}
-
-.boxDetailes {
-  display: flex;
-  flex-direction: row;
-  gap: 40px;
-  margin: 25px 0;
-}
-
-.itemDetailes {
-  text-decoration: none;
-  color: black;
+  gap: 30px;
+  margin-bottom: 30px;
 }
 
 .goBack {
-  color: white;
-  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: #0d3a61;
+  background-color: rgb(237, 233, 226);
   text-decoration: none;
-  padding: 15px;
-  border-radius: 15px;
+  padding: 5px 10px;
+  border-radius: 20px;
   position: absolute;
-  top: 10px;
+  top: 110px;
+  left: 35px;
+  font-size: 16px;
+  font-weight: 500;
+  border: 1px solid transparent;
 }
 
 .goBack:hover {
-  background-color: rgb(122, 122, 122);
+  background-color: #0d3a61;
+  color: rgb(237, 233, 226);
+  border: 1px solid rgb(237, 233, 226);
+}
+
+.aditionalInfoWrap {
+  display: flex;
+  flex-direction: column;
+  border-top: 3px solid;
+  border-bottom: 3px solid;
+  padding: 10px 0;
+  align-items: center;
+}
+
+.userScore {
+  font-size: 20px;
+  margin-bottom: 30px;
+}
+
+.scoreWrap {
+  display: flex;
+  align-items: center;
+}
+
+.infoList {
+  display: flex;
+  gap: 24px;
+  margin-top: 10px;
+}
+
+.infiTitle {
+    font-size: 18px;
+}
+
+.link {
+  display: block;
+  color: rgb(237, 233, 226);
+  text-decoration: none;
+  padding: 5px 10px;
+  border-radius: 20px;
+  font-size: 16px;
+  font-weight: 500;
+  width: 80px;
+  text-align: center;
+  border: 1px solid rgb(237, 233, 226);
+}
+
+.link:hover,
+.link:focus {
+  background-color: rgb(237, 233, 226);
+  color: #0d3a61;
+  border: 1px solid #0d3a61;
 }
