--- a/src/pages/NotFoundPage/NotFoundPage.module.css
+++ b/src/pages/NotFoundPage/NotFoundPage.module.css
@@ -3,20 +3,28 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  margin-top: 40px;
+  margin-top: 20px;
   gap: 20px;
+  font-size: 30px;
 }
 
-.btnHome {
-  border: none;
-  padding: 15px;
-  border-radius: 15px;
-  background-color: gray;
+.homeBtn {
+  display: block;
+  color: #ede9e2;
   text-decoration: none;
-  color: black;
+  padding: 10px 20px;
+  border-radius: 20px;
+  font-size: 20px;
+  font-weight: 500;
+  width: 120px;
+  text-align: center;
+  border: 1px solid rgb(237, 233, 226);
 }
 
-.btnHome:hover {
-  background-color: #fff;
-  border: 1px solid black;
+.homeBtn:hover,
+.homeBtn:focus {
+  background-color: rgb(237, 233, 226);
+  color: #0d3a61;
+  border: 1px solid #0d3a61;
 }
+
